# spdlog-tutorial

./: .gitignore  CMakeLists.txt  README.md
csrc/: custom.cpp  main.cpp
include/: custom.hpp
